--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
-  "dependencies": {},
   "devDependencies": {
     "@vuepress/plugin-active-header-links": "^1.5.0",
     "@vuepress/plugin-google-analytics": "^1.5.0",
@@ -11,6 +10,8 @@
     "markdown-it-image-lazy-loading": "^1.0.2",
     "vuepress": "^1.5.0",
     "vuepress-plugin-smooth-scroll": "0.0.9",
-    "watchpack": "^1.6.1"
+    "watchpack": "^1.6.1",
+    "ip": "^1.1.5",
+    "lodash.template": "^4.5.0"
   }
 }
